# assignment5-alignment

./: .gitignore  claude.md  main.py  pyproject.toml
cs336_alignment/: data_utils.py  drgrpo_grader.py  measure.py
result/baseline/: gsm8k_qwen_baseline.json  result.txt
