[project]
name = "alignment"
version = "1.0.0"
description = "CS 336 Spring 2025 Assignment 5: Alignment"
readme = "README.md"
requires-python = ">=3.11,<3.13"  # Python 3.13 not yet supported for some deps
dependencies = [
    "alpaca-eval",
    "apple-bolt>=4.35.0",
    "datasets>=4.4.0",
    "jupyter>=1.1.1",
    "math-verify[antlr4-13-2]>=0.7.0",
    "pylatexenc==2.10",
    "pytest>=8.3.5",
    "torch>=2.9.0",
    "transformers>=4.55.4",
    "vllm>=0.11.0; sys_platform == 'linux'",
]

[tool.setuptools.packages.find]
include = ["cs336_alignment"]


[tool.uv.sources]
alpaca-eval = { git = "https://github.com/nelson-liu/alpaca_eval.git", rev = "forward_kwargs_to_vllm" }

[[tool.uv.index]]
url = "https://pypi.apple.com/simple"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "WARNING"
